# stepper_motor_gimbal

./: LICENSE  README.md  detector.py  main.py  pyproject.toml  start.sh
src/: color.py  detector.py  filters.py  gimbal.py  main.py  stepper.py  utils.py  uvc.py
